added basic-ftp package

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Athear/pups-a-plenty#readme",
   "dependencies": {
+    "basic-ftp": "^4.6.3",
     "bcrypt": "^5.0.1",
     "connect-session-sequelize": "^7.1.1",
     "dotenv": "^8.2.0",
