--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
   },
   "homepage": "https://github.com/Athear/pups-a-plenty#readme",
   "dependencies": {
-    "basic-ftp": "^4.6.3",
     "bcrypt": "^5.0.1",
     "connect-session-sequelize": "^7.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.1",
     "express-session": "^1.17.1",
+    "ftp": "^0.3.10",
     "mysql2": "^2.2.5",
     "sequelize": "^6.5.1",
     "socket.io": "^4.0.0"
